--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "module": "dist/module.js",
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "scripts": {
-    "dev": "parcel",
+    "dev": "rm -rf dist && parcel",
     "build": "rm -rf dist && parcel build",
     "format": "prettier --write .",
     "prepare": "husky install",
